--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>restexample</finalName>
 	</build>
 
 	<repositories>
